* 20201031 Allow a value of '<>' in an environment variable to mean empty
           string.  Usable everywhere, but needed on Windows since it doesn't
           support set-but-empty environment variables.
* 20201101 Windows: Allow LOGNAME environment variable to override default
           email sender
* 20201101 Change the generation of help text from a manual perldoc call to
           Pod::Usage
* 20201106 Testing: Extensive changes to allow test tools to run on Windows
           cmd.exe
* 20201107 Add ..TOKEN.. form of tokens to more-easily allow tokens to be
           specified from Windows command line.
* 20201116 Previously changed %DATE% to %MESSAGE_ID% in some tests to protect
           against accidental expansion on Windows.  Change back to ..DATE..
           now that it's an option.
* 20201126 Add tools for visualizing errors caused by line ending issues
* 20201126 Rework interactive tests and enable on Windows
* 20201126 Turn releases back on and add release for v20201024.0 (#13)
* 20201126 --output-file (and -stdout and -stderr) now truncate the output
           file if it already existed.
* 20201126 --port and --local-port should override a port set in --server or
           --local-port.
* 20201222 Add transaction-level tests
* 20201223 Add missing option hints from --proxy-version documentation
* 20201223 Remove documentation note about which Authen::NTLM version to use,
           there's only one on CPAN anymore.
* 20201223 When an unsupported XCLIENT attribute is requested, print the
           missing attribute in the error.
* 20201223 Don't print "Exiting" in the XCLIENT attempted but failed message.
           It is always unnecessary (Auth doesn't print it) and is wrong
           when --xclient-optional is in use.
* 20201223 Fix several --drop-after-send bugs and inconsistencies.
* 20201224 Fix --quit-after/--drop-after/--drop-after-send with XCLIENT
           stop-point when XCLIENT is not negotiated.