@@ -353,6 +353,7 @@
   113 --quit-after RCPT
   114 --quit-after TO
   115 --quit-after STARTTLS
+  116 --quit-after XCLIENT-HELO
   120 --quit-after CONNECT + no recip doesn't prompt for To:
   121 --quit-after FIRST-HELO + no recip doesn't prompt for To:
   122 --quit-after XCLIENT + no recip doesn't prompt for To:
@@ -378,6 +379,7 @@
   213 --drop-after RCPT
   214 --drop-after TO
   215 --drop-after STARTTLS
+  216 --drop-after XCLIENT-HELO
 --
   300 --drop-after-send CONNECT
   301 --drop-after-send BANNER
@@ -395,6 +397,7 @@
   313 --drop-after-send RCPT
   314 --drop-after-send TO
   315 --drop-after-send STARTTLS
+  316 --drop-after-send XCLIENT-HELO
 --
   400 --protocol smtp
   401 --protocol ssmtp
